Feature/setup 404 and folder specific pages (#1)
* [feature/Setup-404-and-folder-specific-pages]-code changed